--- a/Unidad 1/1_Introducción.ipynb
+++ b/Unidad 1/1_Introducción.ipynb
@@ -5,9 +5,9 @@
    "id": "404d1d30",
    "metadata": {},
    "source": [
-    "# Introducción a la IA\n",
+    "# <span style=\"color:#00bfff;\"> Introducción a la IA</span>\n",
     "\n",
-    "## ¿Qué es la Inteligencia Artificial?\n",
+    "## <span style=\"color:#00bfff;\">¿Qué es la Inteligencia Artificial?</span>\n",
     "\n",
     "A lo largo de la historia, se ha definido la IA desde diversas perspectivas, lo que ha generado enfoques distintos en su desarrollo.\n",
     "\n",
@@ -29,7 +29,7 @@
    "id": "57c873f0",
    "metadata": {},
    "source": [
-    "# Herramientas y Entornos de Desarrollo\n",
+    "# <span style=\"color:#00bfff;\">Herramientas y Entornos de Desarrollo</span>\n",
     "\n",
     "## Lenguajes de Programación para Inteligencia Artificial:\n",
     "\n",
@@ -57,7 +57,7 @@
     "| **Visual Studio Code** | Editor ligero y versátil con extensiones para IA, como GitHub Copilot y soporte para Python. | [https://code.visualstudio.com](https://code.visualstudio.com) | <div style=\"height:80px\"><img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnoirCtiJhhN8Tvo0FJRRd4CInsOXkRX9EbA&s\"></div> |\n",
     "| **Jupyter Notebook** | Entorno interactivo ideal para ciencia de datos y prototipado de modelos de IA. | [jupyter.org](https://jupyter.org) | <div style=\"height:80px\"><img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSehQLPIoGl2790wxl4fdGqYPcr38cef0Byr1qBg-f1Z7m1zXG-kiuSTHZTrHSm3woTulM&usqp=CAU\"></div> |\n",
     "| **Google Colab** | Plataforma basada en la nube para ciencia de datos, con soporte para Python y frameworks de IA. | [colab.research.google.com](colab.research.google.com) | <div style=\"height:80px\"><img src=\"https://www.marketing-trending.com/wp-content/uploads/2020/07/google-colaboratory-colab-guia-completa.jpg\"></div> |\n",
-    "| **uv (Astral)** | Herramienta de gestión de paquetes y entornos para Python, optimizada para proyectos de IA. | [astral.sh/uv](astral.sh/uv) | <div style=\"height:80px\"><img src=\"https://dashboard.snapcraft.io/site_media/appmedia/2024/09/uv.svg.png\"></div> |\n",
+    "| **uv (Astral)** | Herramienta de gestión de paquetes y entornos para Python, optimizada para proyectos de IA. | [astral.sh/uv](https://docs.astral.sh/uv) | <div style=\"height:80px\"><img src=\"https://dashboard.snapcraft.io/site_media/appmedia/2024/09/uv.svg.png\"></div> |\n",
     "\n",
     "----"
    ]
@@ -67,11 +67,11 @@
    "id": "6e3e96dd",
    "metadata": {},
    "source": [
-    "# Guía de Instalación: Anaconda y uv en Windows\n",
+    "# <span style=\"color:#00bfff;\">Guía de Instalación: Anaconda y uv en Windows</span>\n",
     "\n",
     "Este apartado proporciona las instrucciones para instalar **Anaconda Distribution** y el gestor de paquetes **`uv`** de Astral en un sistema operativo Windows.\n",
     "\n",
-    "## 1. Introducción\n",
+    "## <span style=\"color:#00bfff;\">1. Introducción</span>\n",
     "\n",
     "### ¿Qué es Anaconda?\n",
     "**Anaconda** es una distribución de los lenguajes de programación Python y R para computación científica. Simplifica la gestión de paquetes y el despliegue. Incluye más de 250 paquetes de ciencia de datos populares y permite el acceso a más de 7,500 paquetes adicionales a través del sistema de gestión de paquetes `conda`.\n",
@@ -79,7 +79,7 @@
     "### ¿Qué es `uv`?\n",
     "**`uv`** es un instalador y resolutor de paquetes de Python extremadamente rápido, desarrollado en Rust por Astral. Está diseñado para ser un reemplazo directo de herramientas como `pip` y `pip-tools`, ofreciendo una mejora significativa en la velocidad de instalación y resolución de dependencias.\n",
     "\n",
-    "## 2. Instalación de Anaconda Distribution\n",
+    "## <span style=\"color:#00bfff;\">2. Instalación de Anaconda Distribution</span>\n",
     "\n",
     "El método recomendado para instalar Anaconda es mediante el instalador gráfico, que guía al usuario a través del proceso.\n",
     "\n",
@@ -222,7 +222,7 @@
    "source": [
     "---\n",
     "\n",
-    "## 3. Instalación de `uv` de Astral\n",
+    "## <span style=\"color:#00bfff;\">3. Instalación de `uv` de Astral</span>\n",
     "\n",
     "`uv` puede ser instalado dentro del entorno de Anaconda o de forma global en el sistema. El método más directo para Windows es a través de PowerShell.\n",
     "\n",
@@ -364,6 +364,13 @@
    "id": "7df24dc5",
    "metadata": {},
    "source": [
+    "> <span style=\"color:#ff7800;\">_**Nota:**_</span> \n",
+    "> - _**En Windows:** Si al activar o correr algún comando de **uv** con la terminal arroja error relacionado con los permisos para ejecutar scripts, puede solucionarlo abriendo Power Shell como administrador y ejecute el comando `Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope CurrentUser`. Allí deberá confirmar el cambio en los permisos con 'S' o 'Y', según el idioma y podrá ejecutar los scripts del entorno creado._\n",
+    "\n",
+    "> - _Es posible que, al intentar instalar librerías en el entorno de **uv** en la terminal, el sistema deniegue el el acceso. Esto generalmente se debe a que el entorno está en ejecución y siendo usado por un proceso. Cierre los archivos del editor que puedan estar interviniendo e intente la isntalación de librerías de Python nuevamente._\n",
+    "\n",
+    "> - _En el caso en que Visual Studio Code no detecte el kernel correspondiente al entorno creado, presione `Ctrl + Shift + P` para abrir la barra de comandos y escriba `Developer: Reload Window`. Esto \"refrescará\" VS Code e indexará nuevamente los entornos disponibles._\n",
+    "\n",
     "Con estos pasos, tanto ``Anaconda`` como `uv` estarán instalados y listos para ser utilizados en su sistema Windows, y podrá crear entornos virtuales e instalar las librerías necesarias para sus proyectos.\n",
     "\n",
     "---"
@@ -374,14 +381,14 @@
    "id": "c2f159d0",
    "metadata": {},
    "source": [
-    "## 4. Hola Python!\n",
+    "## <span style=\"color:#00bfff;\">4. Hola Python!</span>\n",
     "\n",
     "Para probar el funcionamiento del entorno de python puede utilizar el siguiente script (No olvide tener instalar prebviamente la librería ``ipykernel``): "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c09eb0f2",
    "metadata": {},
    "outputs": [
@@ -412,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Unidad 1",
+   "display_name": "fundamentos",
    "language": "python",
    "name": "python3"
   },
