--- a/Unidad 1/fundamentos/2_python_basics.ipynb
+++ b/Unidad 1/fundamentos/2_python_basics.ipynb
@@ -5,7 +5,7 @@
    "id": "intro-python-title",
    "metadata": {},
    "source": [
-    "# Introducción a Python: Nivel Básico\n",
+    "# <span style=\"color:#00bfff;\">Introducción a Python: Nivel Básico</span>\n",
     "\n",
     "¡Bienvenido/a al mundo de la programación con Python! Este notebook es una guía interactiva diseñada para quienes no tienen experiencia previa. Aquí aprenderás los fundamentos del lenguaje de una manera práctica.\n",
     "\n",
@@ -19,7 +19,7 @@
    "id": "hola-mundo-intro",
    "metadata": {},
    "source": [
-    "## 1. El \"Hola, Mundo\" y los Comentarios\n",
+    "## <span style=\"color:#00bfff;\">1. El \"Hola, Mundo\" y los Comentarios</span>\n",
     "\n",
     "El primer paso en cualquier lenguaje de programación es aprender a mostrar un mensaje en pantalla. En Python, usamos la función `print()`.\n",
     "\n",
@@ -50,7 +50,7 @@
    "id": "variables-intro",
    "metadata": {},
    "source": [
-    "## 2. Variables y Tipos de Datos Básicos\n",
+    "## <span style=\"color:#00bfff;\">2. Variables y Tipos de Datos Básicos</span>\n",
     "\n",
     "Una **variable** es como una caja con una etiqueta donde guardamos información. Podemos darle un nombre y asignarle un valor con el símbolo `=`."
    ]
@@ -84,7 +84,7 @@
    "id": "data-types-intro",
    "metadata": {},
    "source": [
-    "### Tipos de Datos\n",
+    "### <span style=\"color:#00bfff;\">Tipos de Datos</span>\n",
     "\n",
     "Python maneja diferentes tipos de datos:\n",
     "- **Strings (`str`)**: Para texto. Se escribe entre comillas `\"` o `'`.\n",
@@ -133,7 +133,7 @@
    "id": "data-structures-intro",
    "metadata": {},
    "source": [
-    "## 3. Estructuras de Datos Comunes\n",
+    "## <span style=\"color:#00bfff;\">3. Estructuras de Datos Comunes</span>\n",
     "\n",
     "Para agrupar datos, Python ofrece estructuras muy útiles.\n",
     "\n",
@@ -217,7 +217,7 @@
    "id": "control-flow-intro",
    "metadata": {},
    "source": [
-    "## 4. Control de Flujo\n",
+    "## <span style=\"color:#00bfff;\">4. Control de Flujo</spam>\n",
     "\n",
     "El control de flujo nos permite tomar decisiones y repetir acciones en nuestro código.\n",
     "\n",
@@ -289,7 +289,7 @@
    "id": "functions-intro",
    "metadata": {},
    "source": [
-    "## 5. Funciones\n",
+    "## <span style=\"color:#00bfff;\">5. Funciones</span>\n",
     "\n",
     "Una **función** es un bloque de código reutilizable que realiza una tarea específica. Se definen con la palabra clave `def` y pueden recibir datos (parámetros) para trabajar con ellos."
    ]
@@ -327,7 +327,7 @@
    "id": "conclusion",
    "metadata": {},
    "source": [
-    "## ¡Felicitaciones y Próximos Pasos!\n",
+    "## <span style=\"color:#00bfff;\">¡Felicitaciones y Próximos Pasos!</span>\n",
     "\n",
     "Has completado tu primera introducción a Python. Has aprendido sobre:\n",
     "- Variables y tipos de datos.\n",
@@ -355,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
