--- a/Unidad 1/fundamentos/3_python_intermedio.ipynb
+++ b/Unidad 1/fundamentos/3_python_intermedio.ipynb
@@ -5,7 +5,7 @@
    "id": "5c291475-8c7c-461c-9b12-545a887b2432",
    "metadata": {},
    "source": [
-    "# Nivel Intermedio de Python\n",
+    "# <span style=\"color:#00bfff;\">Nivel Intermedio de Python</span>\n",
     "\n",
     "## Un resumen de las características más avanzadas de Python\n",
     "\n",
@@ -42,7 +42,7 @@
    "id": "9b941e6a-3658-4144-a8d4-72f5e72f3707",
    "metadata": {},
    "source": [
-    "# Parte 1: Comprensiones de listas y diccionarios"
+    "# <span style=\"color:#00bfff;\">Parte 1: Comprensiones de listas y diccionarios</span>"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "id": "c100e5db-5438-4715-921c-3f7152f83f4a",
    "metadata": {},
    "source": [
-    "# Parte 2: Generadores\n",
+    "# <span style=\"color:#00bfff;\">Parte 2: Generadores</span>\n",
     "\n",
     "Usamos Generadores en el curso porque los modelos de IA pueden devolver resultados en forma de stream.\n",
     "\n",
@@ -744,7 +744,7 @@
    "id": "04832ea2-2447-4473-a449-104f80e24d85",
    "metadata": {},
    "source": [
-    "## Ejercicio\n",
+    "## <span style=\"color:#00bfff;\">Ejercicio</span>\n",
     "\n",
     "Escribe algunas clases de Python para el ejemplo de los libros.\n",
     "\n",
@@ -758,7 +758,7 @@
    "id": "35760406-fe6c-41f9-b0c0-3e8cf73aafd0",
    "metadata": {},
    "source": [
-    "# Parte 3: Subclases, Indicadores de Tipo (Type Hints), Pydantic\n",
+    "# <span style=\"color:#00bfff;\">Parte 3: Subclases, Indicadores de Tipo (Type Hints), Pydantic</span>\n",
     "\n",
     "## Aspectos Avanzados de Clases en Python\n",
     "\n",
@@ -959,7 +959,7 @@
    "id": "6bbc9c63",
    "metadata": {},
    "source": [
-    "# Parte 4: Decoradores\n",
+    "# <span style=\"color:#00bfff;\">Parte 4: Decoradores</span>\n",
     "\n",
     "Este apartado explora los **decoradores**, una de las características más potentes y elegantes de Python. Permiten modificar o extender el comportamiento de funciones o métodos de forma limpia y reutilizable.\n",
     "\n",
@@ -1161,7 +1161,7 @@
    "id": "045ef024",
    "metadata": {},
    "source": [
-    "## Conclusión\n",
+    "## <span style=\"color:#ff7800;\">Conclusión</span>\n",
     "\n",
     "Los decoradores son una herramienta de metaprogramación que fomenta la escritura de código **DRY (Don't Repeat Yourself)**. Permiten separar las responsabilidades transversales (como logging o monitoreo) de la lógica de negocio principal, resultando en un código más limpio, modular y fácil de mantener."
    ]
@@ -1183,7 +1183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
