--- a/Unidad 1/fundamentos/4_async_python.ipynb
+++ b/Unidad 1/fundamentos/4_async_python.ipynb
@@ -5,7 +5,7 @@
    "id": "5c291475-8c7c-461c-9b12-545a887b2432",
    "metadata": {},
    "source": [
-    "# Python Asíncrono\n",
+    "# <span style=\"color:#00bfff;\">Python Asíncrono</span>\n",
     "\n",
     "## Un resumen sobre la programación asíncrona en Python"
    ]
