--- a/Unidad 1/fundamentos/5_pydantic.ipynb
+++ b/Unidad 1/fundamentos/5_pydantic.ipynb
@@ -5,7 +5,7 @@
    "id": "intro-pydantic-title",
    "metadata": {},
    "source": [
-    "# Introducción a Pydantic: Validación de Datos en Python\n",
+    "# <span style=\"color:#00bfff;\">Introducción a Pydantic: Validación de Datos en Python</span>\n",
     "\n",
     "Este notebook es una guía práctica para entender y utilizar **Pydantic**, una de las librerías más importantes en el ecosistema de Python moderno para la validación de datos."
    ]
@@ -15,7 +15,7 @@
    "id": "what-is-pydantic",
    "metadata": {},
    "source": [
-    "## 1. ¿Qué es Pydantic y cuándo utilizarlo?\n",
+    "## <span style=\"color:#00bfff;\">1. ¿Qué es Pydantic y cuándo utilizarlo?</span>\n",
     "\n",
     "**Pydantic** es una librería que utiliza los *type hints* (indicadores de tipo) de Python para validar, serializar y parsear datos. En esencia, le permite definir la \"forma\" que deben tener sus datos a través de clases de Python.\n",
     "\n",
@@ -56,14 +56,14 @@
    "id": "define-models",
    "metadata": {},
    "source": [
-    "## 2. Definir Modelos de Datos con `BaseModel`\n",
+    "## <span style=\"color:#00bfff;\">2. Definir Modelos de Datos con `BaseModel`</span>\n",
     "\n",
     "La clase fundamental en Pydantic es `BaseModel`. Se hereda de ella para crear modelos de datos personalizados. Los atributos de la clase se definen con sus respectivos *type hints*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "create-basemodel",
    "metadata": {},
    "outputs": [],
@@ -84,14 +84,14 @@
    "id": "parse-validate",
    "metadata": {},
    "source": [
-    "## 3. Parsear, Validar y Serializar Datos\n",
+    "## <span style=\"color:#00bfff;\">3. Parsear, Validar y Serializar Datos</span>\n",
     "\n",
     "Una vez definido el modelo, Pydantic se encarga del trabajo pesado: tomar datos \"crudos\" (como un diccionario), validarlos contra el modelo y crear una instancia de la clase si todo es correcto."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "validation-example",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "validation-error-example",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "serialization-example",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
    "id": "json-integration",
    "metadata": {},
    "source": [
-    "## 4. Trabajar con `json.loads()` y `json.dumps()`\n",
+    "## <span style=\"color:#00bfff;\">4. Trabajar con `json.loads()` y `json.dumps()`</span>\n",
     "\n",
     "Aunque Pydantic ofrece métodos nativos para manejar JSON, es totalmente compatible con el módulo `json` de Python. El flujo habitual es:\n",
     "1. Cargar un string JSON a un diccionario con `json.loads()`.\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "json-module-example",
    "metadata": {},
    "outputs": [
@@ -259,14 +259,14 @@
    "id": "llm-example-intro",
    "metadata": {},
    "source": [
-    "## 5. Caso Práctico: Procesar la Salida de un LLM\n",
+    "## <span style=\"color:#00bfff;\">5. Caso Práctico: Procesar la Salida de un LLM</span>\n",
     "\n",
     "Imaginemos que le pedimos a un LLM que extraiga información de un texto y nos la devuelva en formato JSON. La salida del modelo puede ser inconsistente: puede incluir campos extra, tener tipos de datos como strings en lugar de números, etc. Pydantic es la herramienta perfecta para limpiar y validar esta salida."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "llm-example-code",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
    "id": "conclusion",
    "metadata": {},
    "source": [
-    "## Conclusión\n",
+    "## <span style=\"color:#ff7800;\">Conclusión</span>\n",
     "\n",
     "Pydantic es una herramienta indispensable para escribir código Python robusto y fiable. Al definir explícitamente la estructura de sus datos, no solo previene errores, sino que también mejora la legibilidad del código y la experiencia de desarrollo gracias al autocompletado y la verificación de tipos de los editores modernos."
    ]
