--- a/Unidad 1/fundamentos/1_notebooks.ipynb
+++ b/Unidad 1/fundamentos/1_notebooks.ipynb
@@ -5,15 +5,15 @@
    "id": "5c291475-8c7c-461c-9b12-545a887b2432",
    "metadata": {},
    "source": [
-    "# Notebooks en Visual Studio Code\n",
+    "# <span style=\"color: #00bfff;\">Notebooks en Visual Studio Code</span>\n",
     "\n",
-    "| *Modificado de las guías del repositorio ``agents`` de [Ed Donner](https://github.com/ed-donner/agents/tree/main).* \n",
+    "> *Modificado de las guías del repositorio ``agents`` de [Ed Donner](https://github.com/ed-donner/agents/tree/main).* \n",
     "\n",
     "Este curso hace un uso intensivo de una herramienta llamada Notebooks (también conocida como Jupyter Notebooks o Labs). Como científicos de datos, hay mucha exploración y experimentación. Y los Notebooks son ideales para este tipo de actividad.\n",
     "\n",
     "Un notebook es un archivo con la extensión \".ipynb\", que significa IPython Notebook, un nombre antiguo para estos.\n",
     "\n",
-    "## Una guía más amplia sobre Notebooks con ejemplos\n",
+    "## <span style=\"color:#00bfff;\">Una guía más amplia sobre Notebooks con ejemplos</span>\n",
     "\n",
     "El Notebook es un campo de juego para la Ciencia de Datos donde puedes escribir código fácilmente e investigar los resultados. Es un entorno ideal para:\n",
     "- Investigación y Desarrollo\n",
@@ -57,7 +57,7 @@
    "id": "9e95df7b-55c6-4204-b8f9-cae83360fc23",
    "metadata": {},
    "source": [
-    "## ¡Felicidades!\n",
+    "## <span style=\"color:#00bfff;\">¡Felicidades!</span>\n",
     "\n",
     "Ahora ejecuta la siguiente celda que establece un valor, seguida de las celdas posteriores para imprimir el valor."
    ]
@@ -134,7 +134,7 @@
    "id": "9442d5c9-f57d-4839-b0af-dce58646c04f",
    "metadata": {},
    "source": [
-    "## Ahora regresa y vuelve a ejecutar la celda con la instrucción de impresión, dos celdas atrás\n",
+    "## <span style=\"color:#00bfff;\">Ahora regresa y vuelve a ejecutar la celda con la instrucción de impresión, dos celdas atrás</span>\n",
     "\n",
     "¿Ves cómo imprime algo diferente, a pesar de que fruta_favorita se cambió más abajo en el notebook?\n",
     "\n",
@@ -168,7 +168,7 @@
    "id": "a29dab2d-bab9-4a54-8504-05e62594cc6f",
    "metadata": {},
    "source": [
-    "# Explicando el 'kernel'\n",
+    "# <span style=\"color:#00bfff;\">Explicando el 'kernel'</span>\n",
     "\n",
     "Detrás de este notebook hay un proceso de Python que ejecuta cada celda cuando la corres. Ese proceso de Python se conoce como el Kernel. Cada notebook tiene su propio Kernel separado.\n",
     "\n",
@@ -200,7 +200,7 @@
    "id": "4d4188fc-d9cc-42be-8b4e-ae8630456764",
    "metadata": {},
    "source": [
-    "# Añadir y eliminar celdas\n",
+    "# <span style=\"color:#00bfff;\">Añadir y eliminar celdas</span>\n",
     "\n",
     "Haz clic en esta celda, luego haz clic en el botón `[+ Código]` en la barra de herramientas de arriba para crear una nueva celda inmediatamente debajo de esta. ¡Copia y pega el código de la celda anterior, y luego ejecútalo! También hay iconos en la esquina superior derecha de la celda seleccionada para eliminarla (papelera)."
    ]
@@ -218,7 +218,7 @@
    "id": "30e71f50-8f01-470a-9d7a-b82a6cef4236",
    "metadata": {},
    "source": [
-    "# Salida de la celda\n",
+    "# <span style=\"color:#00bfff;\">Salida de la celda</span>\n",
     "\n",
     "Cuando ejecutas una celda, la salida estándar y el resultado de la última instrucción se escriben en el área inmediatamente debajo del código, conocida como la 'salida de la celda'. Cuando guardas un Notebook desde el menú de archivo (o ctrl+S o command+S), la salida también se guarda, convirtiéndolo en un registro útil de lo que sucedió.\n",
     "\n",
@@ -251,7 +251,7 @@
    "id": "eac060f2-7a71-46e7-8235-b6ad0a76f5f8",
    "metadata": {},
    "source": [
-    "# Usando markdown\n",
+    "# <span style=\"color:#00bfff;\">Usando markdown</span>\n",
     "\n",
     "Entonces, ¿qué pasa con estas áreas con texto, como esta? Bueno, en realidad hay un tipo diferente de celda llamada celda 'Markdown' para agregar explicaciones como esta. Haz clic en el botón [+ Markdown] para agregar una nueva celda de markdown.\n",
     "\n",
@@ -285,7 +285,7 @@
    "id": "1330c83c-67ac-4ca0-ac92-a71699e0c31b",
    "metadata": {},
    "source": [
-    "# El signo de exclamación\n",
+    "# <span style=\"color:#00bfff;\">El signo de exclamación</span>\n",
     "\n",
     "Hay una característica súper útil de los jupyter labs; puedes escribir un comando con un ! delante en una celda de código, como:\n",
     "\n",
@@ -326,7 +326,7 @@
    "id": "4688baaf-a72c-41b5-90b6-474cb24790a7",
    "metadata": {},
    "source": [
-    "# Pequeñas cosas que encontramos en el curso\n",
+    "# <span style=\"color:#00bfff;\">Pequeñas cosas que encontramos en el curso</span>\n",
     "\n",
     "Esto no es necesariamente una característica de los notebooks, pero es un buen paquete para conocer que es útil en los notebooks.\n",
     "\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2646a4e5-3c23-4aee-a34d-d623815187d2",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6e96be3d-fa82-42a3-a8aa-b81dd20563a5",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:10<00:00, 95.91it/s]\n"
+      "100%|██████████| 1000/1000 [00:10<00:00, 94.50it/s]\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "63c788dd-4618-4bb4-a5ce-204411a38ade",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
    "id": "9d14c1fb-3321-4387-b6ca-9af27676f980",
    "metadata": {},
    "source": [
-    "# ¡Eso es todo! Ya estás al día con los Notebooks / Labs en Visual Studio Code."
+    "# <span style=\"color:#ff7800;\">¡Eso es todo! Ya estás al día con los Notebooks / Labs en Visual Studio Code.</span>"
    ]
   }
  ],
