--- a/Unidad 1/1_Introducción.ipynb
+++ b/Unidad 1/1_Introducción.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# <span style=\"color:#00bfff;\"> Introducción a la IA</span>\n",
     "\n",
+    "> *¡IMPORTANTE!.* *Los aspectos teóricos del curso y la Unidad 1 en específico, puede consultarse a profundidad en [ai-course-UdB](https://ai-course-udb.my.canva.site). Ingrese al sitio y seleccione la unidad correpsondiente.*\n",
+    "\n",
     "## <span style=\"color:#00bfff;\">¿Qué es la Inteligencia Artificial?</span>\n",
     "\n",
     "A lo largo de la historia, se ha definido la IA desde diversas perspectivas, lo que ha generado enfoques distintos en su desarrollo.\n",
