--- a/Unidad 1/1_Introducción.ipynb
+++ b/Unidad 1/1_Introducción.ipynb
@@ -363,6 +363,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96f5d936",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Creación de fichero requirements.txt:** Adicionalmente, si se desean exportar las librerías o módulos instalados en un entorno (``venv``) se puede utilizar el siguiente comando en la carpeta deseada. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "195477e9",
+   "metadata": {
+    "vscode": {
+     "languageId": "powershell"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!uv pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7df24dc5",
    "metadata": {},
    "source": [
@@ -421,7 +444,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fundamentos",
+   "display_name": "Unidad 1",
    "language": "python",
    "name": "python3"
   },
@@ -435,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
